--- a/templates/home.html
+++ b/templates/home.html
@@ -61,8 +61,8 @@ Dignissim enim sit amet venenatis urna. Justo donec enim diam vulputate ut phare
    <h2>Available Flask Khors for sale!</h2>
    <p>TODO - Show the flask khors</p>
      <div style="text-align:center;">
-   <button class="btn btn-primary btn lg">Contact Us</button>
-       <p>Copyright 2023, Famire</p>
+   <button class="btn btn-succes">Contact Us</button>
+       <p class="mt-4">Copyright 2023, Famire</p>
      </div>
      </div>
  </body>
