--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
   <style>
            body {
     background: black;
-    color: green;
+    color: yellow;
            }
     h1 {
       font-size: 40px;
