--- a/templates/flaskitem.html
+++ b/templates/flaskitem.html
@@ -1,6 +1,6 @@
 <div class="border-bottom row" style="margin-bottom:16px;padding-bottom:8px">
   <div class="col-10"
-  <h4>{{flask['title']}}</h4>
+  <h4><b>{{flask['title']}}</b></h4>
   <div>
     <b>location:</b>{{flask['location']}}
   </div>
@@ -10,5 +10,5 @@
 </div>
   <div class="col-2">
   </div>
-  <button type="button" class="btn btn-warning">Order</button>
+  <button type="button" class="btn btn-succes-primary">Order</button>
 </div>
