--- a/templates/home.html
+++ b/templates/home.html
@@ -5,8 +5,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   <style>
            body {
-    background: black;
-    color: yellow;
+    background: whitesmoke;
+    color: black;
            }
     h1 {
       font-size: 40px;
@@ -41,6 +41,7 @@
   </style>
   </head>
  <body>
+{%include 'nav.html'%}
    <div id="container">
  <h1>
    {{company_name}}
