--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,4 +1,4 @@
-<nav class="navbar  shadow-sm fixed-top">
+<nav class="navbar  shadow-sm fixed-top bg-white">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
       <img src="/static/logo.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
@@ -6,3 +6,4 @@
     </a>
   </div>
 </nav>
+<div style="height:56px"></div>
