--- a/templates/flaskitem.html
+++ b/templates/flaskitem.html
@@ -10,5 +10,5 @@
 </div>
   <div class="col-2">
   </div>
-  <button type="button" class="btn btn-succes-primary">Order</button>
+  <a href="https://www.roblox.com/users/2431263785/profile"type="button" class="btn btn-succes-primary">Order</a>
 </div>
